# snippets

./: LICENSE  README.md
ascbmp/: README.md  ascbmp.pl
asmjs/: Makefile  README.md  index.html
boiler/: README.md
boiler/conan/: CMakeLists.txt
captail/: README.md  captail.pl
colconv/: README.md  colconv.pl
conan/: CMakeLists.txt  README.md  conanfile.txt
cpm/: CMakeLists.txt
cpm/src/: main.cpp
dmesgw/: README.md  dmesgw.awk
events/: Makefile  README.md  android.makefile  evsend.sh  main.cpp
ffmpeg/: Makefile  README.md  getaverror.cpp
genaanim/: README.md  main.pl
geninc/: Makefile  README.md  geninc.cpp  test.c
gentxt/: Makefile  README.md  main.c  main.cpp
genwav/: Makefile  README.md  main.c
glitcher/: README.md  glitcher.pl
imgdata-chrome/: README.md  imgdata.sh
java-asm/: pom.xml
java-asm-android/: README.md  build.gradle
jni/: README.md
libcurl/: README.md  main.cpp
libsvg/: Makefile  main.cpp
libwebsockets/: Makefile  README.md  index.html
lldbext/: README.md  lldbext.py
net/: Makefile  README.md  android.makefile  iptomac.c  revshell.c  udpbcast.c  udpmcast.c
ooc/: Makefile  README.md
pcapbytes/: README.md  pcapbytes.pl
pipeye/: Makefile  README.md  android.makefile  main.cpp
pkgbuild/: README.md  pkgbuild.sh
processingjs/: README.md  index.html  main.pde  svg_test.html
snif/: CMakeLists.txt  README.md
snif/src/: Dumper.c  Dumper.h  Sniffer.c  Sniffer.h  main.c
tinyreboot/: Makefile  README.md  rbt.S
vgaout/: Makefile
vidgen/: Makefile  README.md
wasm/: Makefile  README.md  index.html  main.c
(+31 files in other folders)
